--- a/debian/control
+++ b/debian/control
@@ -1,13 +1,16 @@
 Source: kqtquickcharts
 Section: kde
 Priority: optional
-Maintainer: Kubuntu Developers <kubuntu-devel@lists.ubuntu.com>
+Maintainer: Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>
+Uploaders: Maximiliano Curia <maxy@debian.org>
 XSBC-Original-Maintainer: Jonathan Riddell <jriddell@ubuntu.com>
-Build-Depends: debhelper (>= 9.0.0), cmake,
+Build-Depends: debhelper (>= 9), cmake,
  pkg-kde-tools,
  kdelibs5-dev (>= 4:4.13.0),
 Standards-Version: 3.9.5
 Homepage: https://projects.kde.org/projects/kde/kdeedu/kqtquickcharts
+Vcs-Browser: http://anonscm.debian.org/gitweb/?p=pkg-kde/kde-sc/kqtquickcharts.git
+Vcs-Git: git://anonscm.debian.org/pkg-kde/kde-sc/kqtquickcharts.git
 
 Package: qtdeclarative4-kqtquickcharts-1
 Architecture: any
