--- a/debian/control
+++ b/debian/control
@@ -4,9 +4,10 @@ Priority: optional
 Maintainer: Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>
 Uploaders: Maximiliano Curia <maxy@debian.org>
 XSBC-Original-Maintainer: Jonathan Riddell <jriddell@ubuntu.com>
-Build-Depends: debhelper (>= 9), cmake,
- pkg-kde-tools,
- kdelibs5-dev (>= 4:4.13.0),
+Build-Depends: cmake,
+               debhelper (>= 9),
+               kdelibs5-dev (>= 4:4.13.0),
+               pkg-kde-tools
 Standards-Version: 3.9.5
 Homepage: https://projects.kde.org/projects/kde/kdeedu/kqtquickcharts
 Vcs-Browser: http://anonscm.debian.org/gitweb/?p=pkg-kde/kde-sc/kqtquickcharts.git
@@ -15,7 +16,7 @@ Vcs-Git: git://anonscm.debian.org/pkg-kde/kde-sc/kqtquickcharts.git
 Package: qtdeclarative4-kqtquickcharts-1
 Architecture: any
 Section: libs
-Depends: ${shlibs:Depends}, ${misc:Depends}
+Depends: ${misc:Depends}, ${shlibs:Depends}
 Description: QtQuick plugin to render interactive charts
  A QtQuick 1 plugin to render beautiful and interactive charts.
  .
