--- a/debian/control
+++ b/debian/control
@@ -10,8 +10,8 @@ Build-Depends: cmake,
                pkg-kde-tools
 Standards-Version: 3.9.5
 Homepage: https://projects.kde.org/projects/kde/kdeedu/kqtquickcharts
-Vcs-Browser: http://anonscm.debian.org/cgit/pkg-kde/kde-applications/kqtquickcharts.git/
-Vcs-Git: git://anonscm.debian.org/pkg-kde/kde-applications/kqtquickcharts.git
+Vcs-Browser: http://anonscm.debian.org/gitweb/?p=pkg-kde/kde-sc/kqtquickcharts.git
+Vcs-Git: git://anonscm.debian.org/pkg-kde/kde-sc/kqtquickcharts.git
 
 Package: qtdeclarative4-kqtquickcharts-1
 Architecture: any
