--- a/debian/control
+++ b/debian/control
@@ -6,7 +6,7 @@ Uploaders: Maximiliano Curia <maxy@debian.org>
 XSBC-Original-Maintainer: Debian/Kubuntu Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>
 Build-Depends: cmake,
                debhelper (>= 9),
-               kdelibs5-dev (>= 4:14.12.0),
+               kdelibs5-dev,
                pkg-kde-tools
 Standards-Version: 3.9.5
 Homepage: https://projects.kde.org/projects/kde/kdeedu/kqtquickcharts
