--- a/debian/control
+++ b/debian/control
@@ -6,8 +6,8 @@ Uploaders: Maximiliano Curia <maxy@debian.org>
 Build-Depends: cmake, debhelper (>= 9), kdelibs5-dev, pkg-kde-tools
 Standards-Version: 3.9.6
 Homepage: https://projects.kde.org/projects/kde/kdeedu/kqtquickcharts
-Vcs-Browser: http://anonscm.debian.org/cgit/pkg-kde/applications/kqtquickcharts.git
-Vcs-Git: git://anonscm.debian.org/pkg-kde/applications/kqtquickcharts.git
+Vcs-Browser: https://anonscm.debian.org/git/pkg-kde/applications/kqtquickcharts.git
+Vcs-Git: https://anonscm.debian.org/git/pkg-kde/applications/kqtquickcharts.git
 
 Package: qtdeclarative4-kqtquickcharts-1
 Architecture: any
