--- a/debian/control
+++ b/debian/control
@@ -7,7 +7,8 @@ Build-Depends: cmake,
                debhelper (>= 9),
                extra-cmake-modules,
                pkg-kde-tools,
-               qtbase5-dev
+               qtbase5-dev,
+               qtdeclarative5-dev
 Standards-Version: 3.9.8
 Homepage: https://projects.kde.org/projects/kde/kdeedu/kqtquickcharts
 Vcs-Browser: https://anonscm.debian.org/git/pkg-kde/applications/kqtquickcharts.git
