--- a/debian/control
+++ b/debian/control
@@ -14,11 +14,13 @@ Homepage: https://projects.kde.org/projects/kde/kdeedu/kqtquickcharts
 Vcs-Browser: https://anonscm.debian.org/git/pkg-kde/applications/kqtquickcharts.git
 Vcs-Git: https://anonscm.debian.org/git/pkg-kde/applications/kqtquickcharts.git
 
-Package: qtdeclarative4-kqtquickcharts-1
+Package: qml-module-org-kde-charts
 Architecture: any
 Section: libs
 Depends: ${misc:Depends}, ${shlibs:Depends}
+Replaces: qtdeclarative4-kqtquickcharts-1
+Conflicts: qtdeclarative4-kqtquickcharts-1
 Description: QtQuick plugin to render interactive charts
- A QtQuick 1 plugin to render beautiful and interactive charts.
+ A QtQuick plugin to render beautiful and interactive charts.
  .
- kqtquickcharts is part of KDE SC.
+ kqtquickcharts is part of KDE Applications.
