--- a/debian/control
+++ b/debian/control
@@ -3,12 +3,12 @@ Section: kde
 Priority: optional
 Maintainer: Debian/Kubuntu Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>
 Uploaders: Maximiliano Curia <maxy@debian.org>
-Build-Depends: cmake,
+Build-Depends: cmake (>= 2.8.12~),
                debhelper (>= 9),
-               extra-cmake-modules,
+               extra-cmake-modules (>= 1.1.0~),
                pkg-kde-tools,
-               qtbase5-dev,
-               qtdeclarative5-dev,
+               qtbase5-dev (>= 5.2.0~),
+               qtdeclarative5-dev (>= 5.2.0~),
 Standards-Version: 4.1.0
 Homepage: https://projects.kde.org/projects/kde/kdeedu/kqtquickcharts
 Vcs-Browser: https://anonscm.debian.org/git/pkg-kde/applications/kqtquickcharts.git
